fixed the vertical alignment of the submenu with voodoo

--- a/manifest/source/header.less
+++ b/manifest/source/header.less
@@ -140,6 +140,11 @@ header {
 			width: 100%;
 			color: white;
 			text-decoration: none;
+
+			display: table-cell;
+			vertical-align: middle;
+			width: 1000px;
+			padding: 20px 5px;
 		}
 
 		&.fourth a {
